minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__aggregate_function_2.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- General:
    kind:
      - Sum
      - start: 0
        end: 3
    quantifier:
      - Distinct
      - start: 4
        end: 12
    expr:
      - Variable: a
      - start: 13
        end: 14
- start: 0
  end: 15
