minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__generic_value_function_1.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- Generic:
    name:
      - this_is_a_udf
      - start: 0
        end: 13
    args: []
- start: 0
  end: 16
