minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__list_value_constructor_1.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- type_name: ~
  values:
    - - Value:
          Literal:
            Numeric:
              Integer:
                - kind: Decimal
                  integer: "1"
                - start: 1
                  end: 2
      - start: 1
        end: 2
    - - Value:
          Literal:
            Numeric:
              Integer:
                - kind: Decimal
                  integer: "2"
                - start: 4
                  end: 5
      - start: 4
        end: 5
    - - Value:
          Literal:
            Numeric:
              Integer:
                - kind: Decimal
                  integer: "3"
                - start: 7
                  end: 8
      - start: 7
        end: 8
- start: 0
  end: 9
