minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__list_value_type_name_1.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- List
- start: 0
  end: 4
