minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__list_value_type_name_2.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- Array
- start: 0
  end: 5
