minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__numeric_value_function_1.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- Numeric:
    CharLength:
      - Variable: a
      - start: 13
        end: 14
- start: 0
  end: 15
