minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__parenthesized_value_expression.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- Binary:
    op:
      - Add
      - start: 3
        end: 4
    left:
      - Value:
          Literal:
            Numeric:
              Integer:
                - kind: Decimal
                  integer: "1"
                - start: 1
                  end: 2
      - start: 1
        end: 2
    right:
      - Value:
          Literal:
            Numeric:
              Integer:
                - kind: Decimal
                  integer: "1"
                - start: 5
                  end: 6
      - start: 5
        end: 6
- start: 0
  end: 7
