minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__unsigned_value_specification_1.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- SessionUser
- start: 0
  end: 12
