minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__unsigned_value_specification_3.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- Literal:
    Numeric:
      Integer:
        - kind: Decimal
          integer: "123"
        - start: 0
          end: 3
- start: 0
  end: 3
