minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__value_expr__tests__value_expression_1.snap
---
source: minigu/parser/src/parser/impls/value_expr.rs
expression: parsed
---
- IsNot:
    left:
      - Binary:
          op:
            - And
            - start: 3
              end: 6
          left:
            - Variable: a
            - start: 1
              end: 2
          right:
            - Value:
                Literal:
                  Boolean: "False"
            - start: 7
              end: 12
      - start: 0
        end: 13
    right:
      - Unknown
      - start: 21
        end: 28
- start: 0
  end: 28
